# GodotVehicles

./: CMakeLists.txt  README.md
game/: godotvehicles.gdextension  godotvehicles.gdextension.uid  project.godot
game/scenes/: gym.tscn
game/scripts/player/: car_control.gd  car_control.gd.uid
game/shaders/: grid_shader.gdshader  grid_shader.gdshader.uid
src/: CMakeLists.txt
src/godotpp/: CMakeLists.txt
src/godotpp/include/nodes/: vehicles.h
src/godotpp/include/parts/: wheel.h
src/godotpp/src/: register_types.cpp
src/godotpp/src/nodes/: vehicles.cpp
src/godotpp/src/parts/: wheel.cpp
